v0.0.22: Fix PDF page spillover in print and fix zoom scaling display

--- a/www/style.css
+++ b/www/style.css
@@ -234,16 +234,15 @@ body {
     flex-grow: 1;
     overflow: auto;
     background: var(--hover-color);
-    display: flex;
-    justify-content: center;
+    display: block;
+    text-align: center;
     color: var(--text-color);
 }
 
 #viewer-body canvas {
-    max-width: 100%;
-    margin: 10px auto;
+    margin: 15px auto;
     display: block;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.25);
 }
 
 /* Table styles for excel */
